--- a/backend/beauty/src/main/resources/application.properties
+++ b/backend/beauty/src/main/resources/application.properties
@@ -1,1 +1,36 @@
+#server.port=8080
+server.tomcat.uri-encoding=UTF-8
 
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.sql.init.mode=always
+spring.sql.init.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/beauty
+spring.datasource.username=nat
+spring.datasource.password=natty
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+#jpa datasource
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.h2.console.enabled=true
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.ddl-auto = update
+
+## Hibernate Logging
+logging.level.org.hibernate.SQL= DEBUG
+
+logging.level.com.efusion=DEBUG
