--- a/backend/beauty/Jenkinsfile
+++ b/backend/beauty/Jenkinsfile
@@ -15,7 +15,10 @@ pipeline {
     stages {
         stage('Build And Push Docker Image') {
             steps {
-                sh "docker build -t ${DOCKER_IMAGE}:${env.BUILD_NUMBER} -file backend/beauty/Dockerfile ."
+                script {
+                    checkout scm
+                    }
+                sh "docker build -t ${DOCKER_IMAGE}:${env.BUILD_NUMBER} -f backend/beauty/Dockerfile ."
             }
             
             post {
