--- a/backend/beauty/Jenkinsfile
+++ b/backend/beauty/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
                 script {
                     checkout scm
                     }
-                sh "docker build -t ${DOCKER_IMAGE}:${env.BUILD_NUMBER} -f backend/beauty/Dockerfile ."
+                sh "docker build -t ${DOCKER_IMAGE}:${env.BUILD_NUMBER} ."
             }
             
             post {
