--- a/backend/beauty/Jenkinsfile
+++ b/backend/beauty/Jenkinsfile
@@ -17,8 +17,9 @@ pipeline {
             steps {
                 script {
                     checkout scm
-                    cd backend/beauty/
+                    
                     }
+                sh "cd backend/beauty/"
                 sh "docker build -t ${DOCKER_IMAGE}:${env.BUILD_NUMBER}  ."
             }
             
