--- a/backend/beauty/Jenkinsfile
+++ b/backend/beauty/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
                     
                     }
                 sh "cd backend/beauty/"
-                sh "docker build -t ${DOCKER_IMAGE}:${env.BUILD_NUMBER} -f backend/beauty/Dockerfile -f /backend/beauty/ ."
+                sh "docker build -t ${DOCKER_IMAGE}:${env.BUILD_NUMBER} -f backend/beauty/Dockerfile -f backend/beauty/ ."
             }
             
             post {
