--- a/backend/beauty/Jenkinsfile
+++ b/backend/beauty/Jenkinsfile
@@ -17,10 +17,10 @@ pipeline {
             steps {
                 script {
                     checkout scm
-                    
+                    sh "cd backend/beauty/"
+                    sh "docker build -t ${DOCKER_IMAGE}:${env.BUILD_NUMBER} ."
                     }
-                //sh "cd backend/beauty/"
-                sh "docker build -t ${DOCKER_IMAGE}:${env.BUILD_NUMBER} -f backend/beauty/Dockerfile -f backend/beauty/ ."
+                
             }
             
             post {
