--- a/backend/beauty/Jenkinsfile
+++ b/backend/beauty/Jenkinsfile
@@ -17,8 +17,10 @@ pipeline {
             steps {
                 script {
                     checkout scm
-                    sh "cd backend/beauty/
-                    docker build -t ${DOCKER_IMAGE}:${env.BUILD_NUMBER} ."
+                    sh '''
+                        cd backend/beauty/
+                        docker build -t ${DOCKER_IMAGE}:${env.BUILD_NUMBER} .
+                    '''
                     }
                 
             }
