--- a/backend/beauty/Jenkinsfile
+++ b/backend/beauty/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
                 script {
                     checkout scm
                     sh '''
-                        cd backend/beauty/
+                        cd backend/beauty/ &&
                         docker build -t ${DOCKER_IMAGE}:${env.BUILD_NUMBER} .
                     '''
                     }
