--- a/backend/beauty/Jenkinsfile
+++ b/backend/beauty/Jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
                             checkout scm
                             dir('backend/beauty') {
                                 def app = docker.build("${DOCKER_IMAGE}:${env.BUILD_NUMBER}")
-                                app.push("${env.BUILD_NUMBER}")
+                                app.push("${env.BUILD_NUMBER}",false)
                                 app.push("latest")
                             }
                         }
